name:                stack
version:             1.0.3
synopsis:            The Haskell Tool Stack
description:         Please see the README.md for usage information, and
                     the wiki on Github for more details.  Also, note that
                     the API for the library is not currently stable, and may
                     change significantly, even between minor releases. It is
                     currently only intended for use by the executable.
license:             BSD3
license-file:        LICENSE
author:              Commercial Haskell SIG
maintainer:          manny@fpcomplete.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10
homepage:            http://haskellstack.org
extra-source-files:  CONTRIBUTING.md
                     ChangeLog.md
                     README.md

                     -- Glob would be nice, but apparently Cabal doesn't support it:
                     --     cabal: filepath wildcard 'test/package-dump/*.txt' does not match any files.
                     -- Happened during cabal sdist
                     test/package-dump/ghc-7.8.txt
                     test/package-dump/ghc-7.8.4-osx.txt
                     test/package-dump/ghc-7.10.txt

                     stack.yaml

flag integration-tests
  manual: True
  default: False
  description: Run the integration test suite

flag disable-git-info
  manual: True
  default: False
  description: Disable compile-time inclusion of current git info in stack
  -- disabling git info can lead to a quicker workflow in certain
  -- scenarios when you're developing on stack itself, but
  -- should otherwise be avoided
  -- see: https://github.com/commercialhaskell/stack/issues/1425

flag static
  manual: True
  default: False
  description: Pass -static/-pthread to ghc when linking the stack binary.
  -- Not intended for general use. Simply makes it easier to
  -- build a fully static binary on Linux platforms that enable it.

library
  hs-source-dirs:    src/
  ghc-options:       -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates
  exposed-modules:   Options.Applicative.Builder.Extra
                     Options.Applicative.Args
                     Options.Applicative.Complicated
                     Stack.BuildPlan
                     Stack.Clean
                     Stack.Config
                     Stack.Config.Docker
                     Stack.Config.Nix
                     Stack.ConfigCmd
                     Stack.Constants
                     Stack.Coverage
                     Stack.Docker
                     Stack.Docker.GlobalDB
                     Stack.Dot
                     Stack.Fetch
                     Stack.Exec
                     Stack.FileWatch
                     Stack.GhcPkg
                     Stack.Init
                     Stack.New
                     Stack.Nix
                     Stack.Options
                     Stack.Package
                     Stack.PackageDump
                     Stack.PackageIndex
                     Stack.Ghci
                     Stack.Ide
                     Stack.Image
                     Stack.SDist
                     Stack.Setup
                     Stack.Setup.Installed
                     Stack.Solver
                     Stack.Types
                     Stack.Types.Internal
                     Stack.Types.BuildPlan
                     Stack.Types.Compiler
                     Stack.Types.Config
                     Stack.Types.Docker
                     Stack.Types.FlagName
                     Stack.Types.GhcPkgId
                     Stack.Types.Image
                     Stack.Types.Nix
                     Stack.Types.PackageIdentifier
                     Stack.Types.PackageIndex
                     Stack.Types.PackageName
                     Stack.Types.TemplateName
                     Stack.Types.Version
                     Stack.Types.Sig
                     Stack.Types.StackT
                     Stack.Types.Build
                     Stack.Types.Package
                     Stack.Build
                     Stack.Build.Cache
                     Stack.Build.ConstructPlan
                     Stack.Build.Execute
                     Stack.Build.Haddock
                     Stack.Build.Installed
                     Stack.Build.Source
                     Stack.Build.Target
                     Stack.Sig
                     Stack.Sig.GPG
                     Stack.Sig.Sign
                     Stack.Upgrade
                     Stack.Upload
                     System.Process.Read
                     System.Process.Log
                     System.Process.Run
                     Network.HTTP.Download.Verified
                     Data.Attoparsec.Args
                     Data.Attoparsec.Interpreter
                     Data.Maybe.Extra
                     Path.IO
                     Path.Extra
  other-modules:     Network.HTTP.Download
                     Control.Concurrent.Execute
                     Path.Find
                     System.Process.PagerEditor
                     Paths_stack
                     Data.Aeson.Extended
                     Data.Attoparsec.Combinators
                     Data.Binary.VersionTagged
                     Data.IORef.RunOnce
                     Data.Set.Monad
                     Distribution.Version.Extra
  build-depends:     Cabal >= 1.18.1.5
                   , aeson >= 0.8.0.2 && < 0.11
                   , ansi-terminal >= 0.6.2.3
                   , async >= 2.0.2 && < 2.2
                   , attoparsec >= 0.12.1.5 && < 0.14
                   , base >= 4.7 && <5
                   , base16-bytestring
                   , base64-bytestring
                   , bifunctors >= 4.2.1 && < 5.3
                   , binary >= 0.7
                   , binary-tagged >= 0.1.1
                   , blaze-builder
                   , byteable
                   , bytestring
                   , conduit-combinators >= 0.3.1
                   , conduit >= 1.2.4
                   , conduit-extra >= 1.1.7.1
                   , containers >= 0.5.5.1
                   , cryptohash >= 0.11.6
                   , cryptohash-conduit
                   , directory >= 1.2.1.0
                   , edit-distance >= 0.2
                   , either
                   , enclosed-exceptions
                   , errors < 2.2
                   , exceptions >= 0.8.0.2
                   , extra
                   , fast-logger >= 2.3.1
                   , filelock >= 0.1.0.1
                   , filepath >= 1.3.0.2
                   , fsnotify >= 0.2.1
                   , hashable >= 1.2.3.2
                   , hpc
                   , http-client >= 0.4.17
                   , http-client-tls >= 0.2.2
                   , http-conduit >= 2.1.7
                   , http-types >= 0.8.6 && < 0.10
                   , lifted-base
                   , monad-control
                   , monad-logger >= 0.3.13.1
                   , monad-loops >= 0.4.2.1
                   , mtl >= 2.1.3.1
                   , old-locale >= 1.0.0.6
                   , optparse-applicative >= 0.11 && < 0.13
                   , path >= 0.5.1
                   , persistent >= 2.1.2
                   , persistent-sqlite >= 2.1.4
                   , persistent-template >= 2.1.1
                   , pretty >= 1.1.1.1
                   , process >= 1.2.0.0
                   , resourcet >= 1.1.4.1
                   , retry >= 0.6 && < 0.8
                   , safe >= 0.3
                   , semigroups >= 0.5 && < 0.19
                   , split
                   , stm >= 2.4.4
                   , streaming-commons >= 0.1.10.0
                   , tar >= 0.4.1.0 && < 0.6
                   , template-haskell >= 2.9.0.0
                   , temporary >= 1.2.0.3
                   , text >= 1.2.0.4
                   , text-binary
                   , time >= 1.4.2
                   , transformers >= 0.3.0.0
                   , transformers-base >= 0.4.4
                   , unix-compat
                   , unordered-containers >= 0.2.5.1
                   , vector >= 0.10.12.3 && < 0.12
                   , vector-binary-instances
                   , void >= 0.7
                   , yaml >= 0.8.10.1
                   , zlib >= 0.5.4.2 && < 0.7
                   , deepseq >= 1.4
                   , file-embed
                   , word8
                   , hastache
                   , project-template >= 0.2
                   , uuid
                   , zip-archive
  if os(windows)
    cpp-options:     -DWINDOWS
    build-depends:   Win32
  else
    build-depends:   unix >= 2.7.0.1
  default-language:  Haskell2010

executable stack
  hs-source-dirs: src/main
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates
  other-modules:  Paths_stack
  if flag(static)
      ld-options: -static -pthread

  build-depends:  base >=4.7 && < 5
                , bytestring >= 0.10.4.0
                , Cabal
                , containers >= 0.5.5.1
                , exceptions
                , filepath
                , filelock >= 0.1.0.1
                , http-conduit >= 2.1.5
                , lifted-base
                , monad-control
                , monad-logger >= 0.3.13.1
                , mtl >= 2.1.3.1
                , old-locale >= 1.0.0.6
                , optparse-applicative >= 0.11.0.2 && < 0.13
                , path
                , process
                , resourcet >= 1.1.4.1
                , stack
                , text >= 1.2.0.4
                , either
                , directory
                , split
                , unordered-containers
                , hashable
                , conduit
                , transformers
                , http-client
  default-language:    Haskell2010
  if os(windows)
    build-depends:   Win32
    cpp-options:     -DWINDOWS
  if !flag(disable-git-info)
    cpp-options:     -DUSE_GIT_INFO
    build-depends:   gitrev >= 1.1 && < 1.3
                   , optparse-simple >= 0.0.3

test-suite stack-test
  type:           exitcode-stdio-1.0
  hs-source-dirs: src/test
  main-is:        Test.hs
  other-modules:  Spec
                , Stack.BuildPlanSpec
                , Stack.Build.ExecuteSpec
                , Stack.Build.TargetSpec
                , Stack.ConfigSpec
                , Stack.DotSpec
                , Stack.PackageDumpSpec
                , Stack.ArgsSpec
                , Stack.NixSpec
                , Network.HTTP.Download.VerifiedSpec
  ghc-options:    -threaded -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates
  build-depends:  base >=4.7 && <5
                , hspec <2.3
                , attoparsec < 0.14
                , containers >= 0.5.5.1
                , directory
                , exceptions
                , filepath
                , path
                , temporary
                , stack
                , monad-logger
                , http-conduit
                , cryptohash
                , transformers
                , conduit
                , conduit-extra
                , resourcet
                , Cabal
                , text
                , optparse-applicative >= 0.11 && < 0.13
                , bytestring
                , QuickCheck
                , retry >= 0.6 && < 0.8
  default-language:    Haskell2010

test-suite stack-integration-test
  type:           exitcode-stdio-1.0
  hs-source-dirs: test/integration
  main-is:        IntegrationSpec.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates

  if !flag(integration-tests)
    buildable: False

  build-depends:  base >= 4.7 && < 5
                , temporary
                , hspec < 2.3
                , process
                , filepath
                , directory
                , text
                , unix-compat
                , containers >= 0.5.5.1
                , conduit
                , conduit-extra
                , resourcet
                , async < 2.2
                , transformers
                , bytestring
  default-language:    Haskell2010

  -- This isn't actually needed to build stack-integration-test, but it makes it
  -- easier to load up an individual integration test into stack ghci. It's
  -- still a little involved:
  --
  -- stack exec -- stack ghci stack:stack-integration-test --flag stack:integration-tests --no-build
  --
  -- Then, in ghci:
  --
  -- :cd test/integration/tests/.../files
  -- :load ../Main.hs
  -- main
  other-modules: StackTest
  hs-source-dirs: test/integration/lib

source-repository head
  type:     git
  location: https://github.com/commercialhaskell/stack.git
